--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Govert Verkes
+logo: /assets/img/logo.png
+description: My personla webpage
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
