--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Govert Verkes
-logo: /image/face.jpeg
+logo: /images/face.jpeg
 description: My Personal Page
 show_downloads: true
 google_analytics:
