--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Govert Verkes
 logo: /images/face.jpeg
 description: My Personal Page
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
