--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Govert Verkes
 logo: /images/face.jpeg
 description: My Personal Page
-remote_theme: pages-themes/minimal@v0.2.0
+theme: jekyll-theme-minimal
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
